# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  stack.txt
.github/workflows/: docker-image.yml  rust.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
scripts/migrations/: 20240327144828_create_subscriptions_table.sql  20240408031517_make_status_null_in_subscriptions.sql  20240408032153_create_subscription_token_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health.rs
tests/api/: helpers.rs  subscriptions.rs
