[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.5.1"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.197", features = ["derive"]}
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }
config = "0.14.0"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = {version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.7.10"


