[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]

[dependencies]
reqwest = {version = "0.12.2", features = ["json", "rustls-tls"]}
actix-web = "4.5.1"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.197", features = ["derive"]}
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "tls-native-tls"
] }
config = "0.14.0" #wont work with 0.14.0
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
once_cell = "1.19.0" #wont work above 1.17.2
secrecy = {version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.7.10"
unicode-segmentation = "1.11.0"
claim = "0.5.0"
validator = "0.17.0"
fake = "2.9.2"


